Collection API Улучшения.