@@ -1,19 +1,15 @@
 package ru.job4j.collection;
 
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.*;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class ConvertListTest {
     @Test
     public void whenTwoList() {
-        List<int[]> in = new ArrayList<>();
-        in.add(new int[]{1});
-        in.add(new int[]{2, 3});
-        List<Integer> expect = Arrays.asList(1, 2, 3);
+        List<int[]> in = List.of(new int[]{1}, new int[]{2, 3});
+
+        List<Integer> expect = List.of(1, 2, 3);
         Assert.assertEquals(ConvertList.convert(in), (expect));
     }
 }
