@@ -1,9 +1,7 @@
 package ru.job4j.list;
 
-import org.junit.Assert;
-import org.junit.Test;
+import org.junit.*;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class ConvertMatrix2ListTest {
@@ -14,9 +12,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
-                1, 2, 3, 4
-        );
+        List<Integer> expect = List.of(1, 2, 3, 4);
         List<Integer> result = list.toList(input);
         Assert.assertEquals(result, expect);
     }
